<resources>
    <string name="app_name">Kitchpanich CSCE305 Project1</string>
    <string name="rest_text_view">to rest</string>
    <string name="next_button">next</string>
    <string name="prev_button">prev</string>
    <string name="love_text_view">to love</string>
    <string name="wig_text_view">wig</string>
    <string name="rest_thai_text_view">พัก</string>
    <string name="chest_text_view">chest</string>
    <string name="chest_thai_text_view">อก</string>
    <string name="vegetable_text_view">vegetable</string>
    <string name="vegetable_thai_text_view">ผัก</string>
    <string name="love_thai_text_view">รัก</string>
    <string name="wig_thai_text_view">วิก</string>
    <string name="building_text_view">building</string>
    <string name="building_thai_text_view">ตึก</string>
    <string name="recall_text_view">to recall (remember)</string>
    <string name="recall_thai_text_view">นึก</string>
    <string name="ripe_text_view">ripe</string>
    <string name="ripe_thai_text_view">สุก</string>
    <string name="small_thai_text_view">เล็ก</string>
    <string name="child_text_view">child</string>
    <string name="child_thai_text_view">เด็ก</string>
    <string name="paragraph1">When short vowels are paired with dead endings, there are some
        spelling transformations, which include some new symbols.  The tone rules for short vowels
        and dead endings are the same as for syllables with short vowels and no endings.
        As a result, while learning this topic you can rely on knowledge you have already gained,
        and you can reinforce that earlier knowledge when working on this topic.</string>
    <string name="paragraph2">Three of the short vowels have spelling transformations when they
        occur in syllables with dead endings.  The transformations include things like substituting
        a new symbol, dropping symbols, and so on.  The transformations of a given vowel are the
        same for each of the three dead endings, so it’s sufficient to illustrate them with random
        syllables ending in ก, for example.</string>
    <string name="paragraph3">The tones for syllables consisting of an initial consonant, a short
        vowel, and a dead ending follow a specific set of rules.  This is a statement of the rules:</string>
    <string name="small_text_view">small</string>
    <string name="paragraph4">When you encounter a new word or syllable consisting of a consonant,
        a long vowel, and a dead ending, if you prefer the mnemonic, you don’t have to remember
        the tone rule explicitly.  Instead, ask yourself, is the syllable like เด็ก or เล็ก or นับ or สิบ ?
        In other words, you’re asking yourself whether the initial consonant is mid, high, or low.
        If you can “feel” the class of the consonant, then you apply the tone from the syllable in
        the mnemonic device which “feels” like it.</string>

</resources>
