<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="330dp"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:paddingTop="30px"
                android:text="Short Vowels and Dead Endings"
                android:textColor="#000000"
                android:textSize="10pt"
                android:textStyle="bold|italic" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="10px"
                android:paddingLeft="20px"
                android:paddingRight="20px"
                android:paddingTop="10px"
                android:text="@string/paragraph1" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="10px"
                android:paddingLeft="20px"
                android:paddingRight="20px"
                android:paddingTop="10px"
                android:text="@string/paragraph2" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="10px"
                android:paddingLeft="20px"
                android:paddingRight="20px"
                android:paddingTop="10px"
                android:text="@string/paragraph3" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:paddingTop="25px"
                android:text="Mid consonant + short vowel + dead ending = low tone" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:paddingTop="25px"
                android:text="High consonant + short vowel + dead ending = low tone" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:paddingTop="25px"
                android:text="Low consonant + long vowel + dead ending = high tone" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="20px"
                android:paddingTop="35px"
                android:text="Examples will be provided in the next pages." />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:orientation="horizontal"
                android:paddingTop="10dp">

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="onToPageTen"
                    android:text="@string/prev_button" />

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="onToPageOne"
                    android:text="@string/next_button" />


            </LinearLayout>

        </LinearLayout>
    </ScrollView>
</LinearLayout>