<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center_horizontal"
                android:paddingTop="30px"
                android:text="The Mnemonic Device"
                android:textColor="#000000"
                android:textSize="10pt"
                android:textStyle="bold|italic" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="10px"
                android:paddingLeft="20px"
                android:paddingRight="20px"
                android:paddingTop="10px"
                android:text="Remember this sentence:" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="10px"
                android:paddingLeft="20px"
                android:paddingRight="20px"
                android:paddingTop="10px"
                android:text="เด็ก		เล็ก		นับ		สิบ	    =     The little kid counts to ten.   " />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="10px"
                android:paddingLeft="20px"
                android:paddingRight="20px"
                android:paddingTop="10px"
                android:text="low    high    high    low" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingBottom="10px"
                android:paddingLeft="20px"
                android:paddingRight="20px"
                android:paddingTop="10px"
                android:text="@string/paragraph4" />





            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:orientation="horizontal"
                android:paddingTop="10dp">

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="onToPageTen"
                    android:text="@string/prev_button" />

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="onToPageZero"
                    android:text="@string/next_button" />


            </LinearLayout>

        </LinearLayout>
    </ScrollView>
</LinearLayout>